crates/reinhardt-db-macros/tests/ui/fail/missing_collection.rs
use reinhardt_db_macros::document;

#[document(backend = "mongodb")]
struct User {
    #[field(primary_key)]
    id: String,
}

fn main() {}
